# wge

./: .clang-format  CMakeLists.txt  Dockerfile  docker-compose.yml  wge-kafka-detector-design.md
adapters/akto/: README.md  akto_adapter.cc  akto_adapter.h  akto_dlq.cc  akto_dlq.h  akto_metrics.h  akto_preprocessor.cc  akto_preprocessor.h  log_mapping.yaml  test_akto_adapter.cc  wge-detector.yaml
audit/: generate_report.py  审计报告_WGE接入Akto架构设计.md
config/: log_mapping.yaml  wge-detector.yaml
docs/: DEVELOPMENT.md  INSTALL.md  TESTING.md  WGE 接入 Akto GUI 架构设计与实施报告 (终极版....md
proto/: akto_message.proto  http_access.proto  malicious_event.proto  wge_alert.proto
scripts/: build.sh  dependency_check.sh  install.sh
src/: CMakeLists.txt.stone-rhino  main.cc  rule.cc
src/action/: actions_include.h
src/common/: variant.h
src/common/hyperscan/: expression.cc  scanner.cc  scanner.h  scratch.h  scratch_pool.cc  scratch_pool.h
src/common/literal_match/: scanner.h
src/common/pcre/: scanner.cc  scanner.h  scratch.h  scratch_pool.cc  scratch_pool.h
src/common/ragel/: multi_part.h
src/config/: config.h  config_loader.cc  config_loader.h
src/detector/: alert_builder.cc  alert_builder.h  detector_service.cc  detector_service.h  http_extractor_adapter.cc  http_extractor_adapter.h  result.h  worker_pool.cc  worker_pool.h
src/kafka/: consumer.cc  consumer.h  dlq.cc  dlq.h  producer.cc  producer.h
src/mapper/: field_applier.cc  field_applier.h  json_mapper.cc  json_mapper.h  mapper.cc  mapper.h  mapper_config.cc  mapper_config.h  regex_mapper.cc  regex_mapper.h
src/metrics/: metrics.cc  metrics.h
src/operator/: rx.cc
src/transformation/: trim.cc
src/transformation/ragel/: url_decode_uni.rl
src/variable/: matched_optree.h
src/wal/: wal_relay.cc  wal_relay.h  wal_writer.cc  wal_writer.h
test/integration/: test_concurrent_worker.cc  test_e2e_pipeline.cc  test_nginx_injection.cc  test_offset_state_machine.cc  test_wal_roundtrip.cc
test/transformation/: transformation_test.cc
test/unit/: test_alert_builder.cc  test_config_loader.cc  test_extractor_adapter.cc  test_field_applier.cc  test_json_mapper.cc  test_offset_manager.cc  test_regex_mapper.cc  test_worker_pool.cc
tools/: perf_modsecurity_benchmark.sh  perf_modsecurity_benchmark_tcmalloc.sh  perf_wge_benchmark.sh  perf_wge_benchmark_tcmalloc.sh
